# bevy-snake

./: Cargo.toml  Readme.md
.github/workflows/: rust.yml
levels/: 1.level
src/: lib.rs  main.rs  snake_plugin.rs
src/snake/: common.rs  game.rs  mod.rs
